--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     <main>
       <section class="hero">
         <h1 class="title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button type="button1" class="button1">Заказать услугу</button>
+        <button type="button1" class="button1" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hidden"data-modal>
+          <div class="modal">
+            <p></p>
+            <button class="modal-button" data-modal-close>х</button>
+          </div>
+        </div>
       </section>
 
       <section class="section">
@@ -387,5 +393,6 @@
       </div>
     </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
