--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
         <div class="backdrop is-hidden"data-modal>
           <div class="modal">
             <p></p>
-            <button class="modal-button" data-modal-close>х</button>
+            <button class="modal-button" data-modal-close>
+              <svg class="exit" width="18" height="18">
+                <use href="./images/sprite.svg#icon-Vector-1-1"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
@@ -121,15 +125,30 @@
         <h2 class="section-about">Чем мы занимаемся</h2>
         <ul class="imgss">
           <li class="img">
+            <a href="" class="action-image">
             <img src="./images/box_1.jpg" alt="Mac" width="370" />
+          </a>
+            <div class="action">
+              <p class="action-text">десктопные приложения</p>
+            </div>
           </li>
 
           <li class="img">
+            <a href="" class="action-image2">
             <img src="./images/box_2.jpg" alt="Nout" width="370" />
+          </a>
+          <div class="action2">
+            <p class="action-text">мобильные приложения</p>
+          </div>
           </li>
 
           <li class="img">
+            <a href="" class="action-image3">
             <img src="./images/box_3.jpg" alt="Smartphone" width="370" />
+          </a>
+          <div class="action3">
+            <p class="action-text">дизайнерские решения</p>
+          </div>
           </li>
         </ul>
         </div>
