--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,10 @@
         <ul class="list project">
           <li class="project-foto1">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img0.jpg" alt="Web" width="370" />
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+          </div>
             <div class="cards">
             <h2 class="section-title2">Технокряк</h2>
             <p class="text2">Веб-сайт</p>
@@ -87,7 +90,10 @@
 
           <li class="project-foto">
             <a class="webproject" href="">
+              <div class="paragraf1">
             <img src="./images/img1.jpg" alt="Disain" width="370" />
+            <p class="paragraf-text1"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Постер New Orlean vs Golden Star</h2>
             <p class="text2">Дизайн</p>
@@ -97,7 +103,10 @@
 
           <li class="project-foto3">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img2.jpg" alt="Smartphone" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Ресторан Seafood</h2>
             <p class="text2">Приложение</p>
@@ -106,7 +115,10 @@
           </li>
           <li class="project-foto1">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img3.jpg" alt="Marc" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Проект Prime</h2>
             <p class="text2">Макретинг</p>
@@ -116,7 +128,10 @@
 
           <li class="project-foto">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img4.jpg" alt="Pril" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Проект Boxes</h2>
             <p class="text2">Приложение</p>
@@ -126,7 +141,10 @@
 
           <li class="project-foto3">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img5.jpg" alt="Web2" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Inspiration has no Borders</h2>
             <p class="text2">Веб-сайт</p>
@@ -135,7 +153,10 @@
           </li>
           <li class="project-foto1">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img6.jpg" alt="Dis2" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Издание Limited Edition</h2>
             <p class="text2">Дизайн</p>
@@ -144,7 +165,10 @@
           </li>
           <li class="project-foto">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img7.jpg" alt="Lab" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Проект LAB</h2>
             <p class="text2">Маркетинг</p>
@@ -153,7 +177,10 @@
           </li>
           <li class="project-foto3">
             <a class="webproject" href="">
+              <div class="paragraf">
             <img src="./images/img8.jpg" alt="Pril2" width="370" />
+            <p class="paragraf-text"></p>
+            </div>
             <div class="cards">
             <h2 class="section-title2">Growing Business</h2>
             <p class="text2">Приложение</p>
