--- a/portfolio.html
+++ b/portfolio.html
@@ -90,9 +90,9 @@
 
           <li class="project-foto">
             <a class="webproject" href="">
-              <div class="paragraf1">
+              <div class="paragraf">
             <img src="./images/img1.jpg" alt="Disain" width="370" />
-            <p class="paragraf-text1"></p>
+            <p class="paragraf-text"></p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Постер New Orlean vs Golden Star</h2>
