--- a/index.html
+++ b/index.html
@@ -125,28 +125,22 @@
         <h2 class="section-about">Чем мы занимаемся</h2>
         <ul class="imgss">
           <li class="img">
-            <a href="" class="action-image">
             <img src="./images/box_1.jpg" alt="Mac" width="370" />
-          </a>
             <div class="action">
               <p class="action-text">десктопные приложения</p>
             </div>
           </li>
 
           <li class="img">
-            <a href="" class="action-image2">
             <img src="./images/box_2.jpg" alt="Nout" width="370" />
-          </a>
-          <div class="action2">
+          <div class="action">
             <p class="action-text">мобильные приложения</p>
           </div>
           </li>
 
           <li class="img">
-            <a href="" class="action-image3">
             <img src="./images/box_3.jpg" alt="Smartphone" width="370" />
-          </a>
-          <div class="action3">
+          <div class="action">
             <p class="action-text">дизайнерские решения</p>
           </div>
           </li>
