--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img1.jpg" alt="Disain" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Постер New Orlean vs Golden Star</h2>
@@ -105,7 +105,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img2.jpg" alt="Smartphone" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Ресторан Seafood</h2>
@@ -117,7 +117,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img3.jpg" alt="Marc" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Проект Prime</h2>
@@ -130,7 +130,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img4.jpg" alt="Pril" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Проект Boxes</h2>
@@ -143,7 +143,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img5.jpg" alt="Web2" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Inspiration has no Borders</h2>
@@ -155,7 +155,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img6.jpg" alt="Dis2" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Издание Limited Edition</h2>
@@ -167,7 +167,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img7.jpg" alt="Lab" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Проект LAB</h2>
@@ -179,7 +179,7 @@
             <a class="webproject" href="">
               <div class="paragraf">
             <img src="./images/img8.jpg" alt="Pril2" width="370" />
-            <p class="paragraf-text"></p>
+            <p class="paragraf-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
             <div class="cards">
             <h2 class="section-title2">Growing Business</h2>
